Fix popups in dark mode

--- a/playground/vite-app/src/index.css
+++ b/playground/vite-app/src/index.css
@@ -36,6 +36,7 @@
 
 html {
   margin: 0;
+  color-scheme: light dark;
 }
 
 body {
